[package]
name = "swc-plugin-typed-redux-saga"
version = "0.1.7"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Uncomment to achieve smallest possible binary size (may require more experimentation).
# Disclaimer: measure effects on runtime, results can be surprising.
# strip = "debuginfo"
# codegen-units = 1
# lto = true
# opt-level = "z"

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
swc_core = { version = "0.23.24", features = ["plugin_transform", "ecma_ast", "ecma_visit"] }

[dev-dependencies]
swc_core = { version = "0.23.24", features = ["testing_transform", "ecma_parser"] }