[package]
name = "swc-plugin-typed-redux-saga"
version = "0.7.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Uncomment to achieve smallest possible binary size (may require more experimentation).
# Disclaimer: measure effects on runtime, results can be surprising.
# strip = "debuginfo"
# codegen-units = 1
# lto = true
# opt-level = "z"

[dependencies]
serde = "1.0.152"
serde_json = "1.0.93"
swc_core = { version = "5.0.4", features = ["ecma_plugin_transform", "ecma_ast", "ecma_visit"] }

[dev-dependencies]
swc_core = { version = "5.0.4", features = ["testing_transform", "ecma_parser"] }